# python-automation-tools

./: LICENCE  LICENSE  README.md  pyproject.toml  setup.cfg
examples/csv_summarizer/: sample_input.csv  sample_output.csv
examples/interval_mapper/: sample_input.csv  sample_intervals.csv  sample_output.csv
src/file_tools/: README.md  __init__.py
src/file_tools/csv_summarizer/: README.md  __init__.py  csv_summarizer.py
src/file_tools/doc_to_docx_converter/: README.md  __init__.py  doc_to_docx_converter.py
src/file_tools/interval_mapper/: README.md  __init__.py  interval_mapper.py
tests/: test_csv_summarizer.py
