[metadata]
name = python-automation-tools
version = 0.1.0
description = A collection of reusable Python automation utilities.
author = Muhammed Yunus Yıldız
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    numpy

[options.packages.find]
where = src
